hphp/hack/test/typecheck/classname/acts_as_string.php.exp
File "acts_as_string.php", line 11, characters 3-13:
  classname<exact Tr>
File "acts_as_string.php", line 30, characters 8-9:
Invalid argument (Typing[4110])
  File "pseudofunctions.hhi", line 44, characters 29-33:
  Expected `arraykey` (variadic argument)
  File "acts_as_string.php", line 29, characters 26-34:
  But got `Stringish`
